Add buttons on mobile

--- a/frontend/questions.html
+++ b/frontend/questions.html
@@ -6,8 +6,8 @@
 
 <template id="answer-template">
     <div class="folder-card">
-        <div class="name-label">Name</div>
-        <div class="value-text">Value</div>
+        <div class="name-label"></div>
+        <div class="value-text"></div>
     </div>
 </template>
 
