--- a/frontend/mobile.html
+++ b/frontend/mobile.html
@@ -3,22 +3,29 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Remote</title>
+    <script src="/static/btn.js"></script>
 </head>
 <body>
-    <div id="nameSelectContainer">
-        <input max="20" id="name" type="text" placeholder="Your Name"/>
-        <button class="btn btn-submit" onclick="submitName()"> Submit Name</button>
-    </div>
+<div id="nameSelectContainer">
+    <input
+            maxlength="20"
+            id="name"
+            type="text"
+            placeholder="Your Name"
+            inputmode="text"
+            autocapitalize="words"
+            autocorrect="off"
+            autocomplete="off"
+            spellcheck="false"
+    />
+    <button class="btn btn-submit" onclick="submitName()"> Submit Name</button>
+</div>
 
-    <div id="votingContainer">-
-        <button class="btn btn-good" onclick="send(1)">GOOD</button>
-        <button class="btn btn-bad" onclick="send(0)">BAD</button>
-        <button class="btn question" onclick="send(255)">?</button>
-        <button class="btn btn-bang" onclick="send(254)">!</button>
-    </div>
+<div id="votingContainer">
+</div>
 </body>
 
-<script>
+<script type="application/javascript">
     const sessionId = window.location.pathname.split('/').pop();
     let ws = null;
     let name = null;
@@ -30,29 +37,78 @@
     }
 
     function submitName() {
+        const btnContainerId = "votingContainer";
         name = document.getElementById("name").value;
         document.getElementById("nameSelectContainer").style.display = "None";
-        document.getElementById("votingContainer").style.display = "flex";
+        document.getElementById(btnContainerId).style.display = "flex";
+        renderBtns(btnContainerId, send);
 
         ws = new WebSocket(`ws://${window.location.host}/ws/${sessionId}/${Date.now()}/${name}`);
     }
+
+    function startRegistration() {
+        const nameInput = document.getElementById("name");
+        nameInput.focus();
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+        startRegistration()
+    });
+    document.getElementById("name").addEventListener("keypress", function (event) {
+        if (event.key === "Enter") {
+            event.preventDefault();
+            submitName();
+        }
+    });
 </script>
 
 <style>
+    * {
+        box-sizing: border-box;
+    }
+
     body {
         font-family: sans-serif;
         display: flex;
         flex-direction: column;
         height: 100vh;
         margin: 0;
+        background-color: black;
     }
 
-    button {
+    #name {
+        width: 100%;
+        padding: 10px;
+        font-size: 1.5rem;
+        font-weight: bold;
+        border: 3px solid black;
+        border-radius: 8px;
+        outline: none;
+        box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.25);
+        transition: all 0.2s ease;
+    }
+
+    #name:focus {
+        transform: translate(-2px, -2px);
+        box-shadow: 2px 2px 0px 0px #007bff;
+    }
+
+    #name::placeholder {
+        color: #888;
+        font-style: italic;
+        font-size: 1.2rem;
+    }
+
+    .btn {
         flex: 1;
         font-size: 3rem;
-        border: none;
-        color: white;
-        transition: opacity 0.2s;
+        border: 1px solid black;
+        color: black;
+        cursor: pointer;
+
+        box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.25);
+        transition: transform 0.1s ease, filter 0.1s ease, outline 0.1s ease;
+        position: relative;
     }
 
     .btn:hover {
@@ -60,23 +116,68 @@
     }
 
     .btn-submit {
-        background-color: blue
+        background-color: blue;
+        width: 100%;
     }
 
     #votingContainer {
         display: none;
+        width: 100%;
     }
 
-    .btn-good {
-        background-color: #28a745;
+    #votingContainer > * {
+        color: black;
     }
 
-    .btn-bad {
-        background-color: #dc3545;
+    .button-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 1fr;
+        height: 100%;
+        gap: 0;
     }
 
-    button:active {
-        opacity: 0.7;
+    #votingContainer {
+        display: none;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+    }
+
+    .group-wrapper[data-group="1"] {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .group-wrapper[data-group="1"] .button-grid {
+        flex: 1;
+    }
+
+    .button-grid .btn:last-child:nth-child(odd) {
+        grid-column: 1 / span 2;
+    }
+
+    .group-wrapper[data-group="2"] {
+        margin-top: auto;
+        flex: 0 0 auto;
+    }
+
+    .btn:active {
+        filter: brightness(1.1) !important;
+        transform: scale(0.95);
+    }
+
+    .btn.active-highlight {
+        outline: 5px solid white;
+        outline-offset: -5px;
+        z-index: 10;
+        filter: brightness(1.3);
+        box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
+    }
+
+    .btn.other-highlighted {
+        filter: brightness(0.6);
     }
 </style>
 
