--- a/frontend/questions.html
+++ b/frontend/questions.html
@@ -1,17 +1,45 @@
-<h1> How was your day so far? </h1>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voting</title>
+    <script src="/static/btn.js"></script>
+</head>
 
-<div class="answers">
+<body>
 
-</div>
+    <h1> How was your day so far? </h1>
 
-<template id="answer-template">
-    <div class="folder-card">
-        <div class="name-label"></div>
-        <div class="value-text"></div>
+    <div class="answers">
     </div>
-</template>
 
+    <template id="answer-template">
+        <div class="card-container">
+            <div class="card-label user-name"></div>
+            <div class="card">
+                <div class="card-face card-back">
+                    <img src="/static/images/card-back.png">
+                </div>
 
+                <div class="card-face card-front">
+                    <div class="card-inner">
+                        <header class="card-header">
+                            <h1 class="user-name"></h1>
+                        </header>
+
+                        <div class="card-image-container">
+                            <img class="card-image">
+                        </div>
+
+                        <footer class="card-footer">
+                            <div class="trivia-icon"></div>
+                            <p class="trivia">
+                            </p>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
+</body>
 <script>
     const existingUsers = {};
     const sessionId = window.location.pathname.split('/').pop();
@@ -19,68 +47,165 @@
     const answerTemplate = document.querySelector("#answer-template");
 
     ws.addEventListener("message", (message) => {
-        console.log(existingUsers)
         const parsedMessage = JSON.parse(message.data)
+        const selectedBtn = getBtn(parsedMessage.message);
         let answer = null;
         if (parsedMessage.userId in existingUsers) {
             answer = existingUsers[parsedMessage.userId]
         } else {
             const fragment = answerTemplate.content.cloneNode(true);
-            fragment.querySelector(".name-label").innerText = parsedMessage.name;
-            fragment.querySelector(".folder-card").setAttribute('id', parsedMessage.userId)
+
             answer = fragment.firstElementChild;
+            answer.querySelectorAll(".user-name").forEach(el => {el.innerText=parsedMessage.name})
 
             document.querySelector(".answers").appendChild(answer);
+            answer.addEventListener("click", function () {
+                this.classList.toggle("is-flipped");
+                this.querySelector(".card").classList.toggle("is-flipped");
+                this.querySelector(".card-label").classList.toggle("card-flipped");
+            });
             existingUsers[parsedMessage.userId] = answer;
         }
 
-        answer.querySelector(".value-text").innerText = parsedMessage.message;
-
+        answer.querySelector(".card-image").src = `/static/images/${selectedBtn.img}`;
+        answer.querySelector(".trivia").innerText = getTrivia(selectedBtn);
     });
 </script>
 
 <style>
-    .folder-card {
+    :root {
+        --navy: #2c3e50;
+        --off-white: #e0e0d6;
+        --header-text-size: 0.6rem;
+    }
+
+    body {
+        background-color: black;
+    }
+
+    body > * {
+        color: white;
+    }
+
+    .card-container {
+        width: 175px;
+        height: 270px;
+        perspective: 1000px;
+        cursor: pointer;
+    }
+
+    .card-label {
+        color: white;
+        font-size: var(--header-text-size);
+        font-weight: bold;
+        letter-spacing: 2px;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        text-align: center;
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 1s ease, visibility 0s linear 0s;
+    }
+
+    .card-label.card-flipped {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 1s ease, visibility 0s linear 1s;
+    }
+
+    .card {
         position: relative;
-        width: 300px;
-        height: 150px;
-        background-color: #27ae60;
-
-        border: 2px solid black;
-        border-radius: 0 40px 15px 15px;
-        box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.15);
-
-        padding: 15px;
-        font-family: sans-serif;
-        margin-top: 50px;
-    }
-
-    .folder-card::before {
-        content: "";
-        position: absolute;
-        top: -30px;
-        left: -2px;
-        width: 150px;
-        height: 30px;
-        background-color: #27ae60;
-        border: 2px solid black;
-        border-bottom: none;
-        border-radius: 10px 10px 0 0;
-    }
-
-    .name-label {
-        position: absolute;
-        top: -20px;
-        font-weight: bold;
-        font-size: 1.1rem;
-    }
-
-    .value-text {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        width: 100%;
         height: 100%;
-        font-size: 1.5rem;
-        font-weight: bold;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
     }
+
+    .card.is-flipped {
+        transform: rotateY(-180deg);
+    }
+
+    .card, .card-back > * {
+        border-radius: 15px;
+        width: 175px;
+        height: 270px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    }
+
+    .card-face {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+
+    .card-front {
+        background-color: var(--navy);
+        border-radius: 15px;
+        padding: 3px;
+        transform: rotateY(180deg);
+    }
+
+    .card-back img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .card-inner {
+        background-color: var(--off-white);
+        height: 100%;
+        border-radius: 15px;
+        border: 2px solid var(--navy);
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-header {
+        border-bottom: 3px double var(--navy);
+        padding: 10px 0;
+        text-align: center;
+    }
+
+    .card-header h1 {
+        margin: 0;
+        font-size: var(--header-text-size);
+        letter-spacing: 1px;
+        color: var(--navy);
+    }
+
+    .card-image-container {
+        padding: 2px;
+        height: 150px;
+    }
+
+    .card-image {
+        width: 165px;
+        height: 150px;
+    }
+
+    .card-footer {
+        border-top: 3px double var(--navy);
+        padding: 15px;
+        display: flex;
+        align-items: flex-start;
+        gap: 12px;
+    }
+
+    .trivia-icon {
+        font-size: 1.8rem;
+        color: var(--navy);
+    }
+
+    .trivia {
+        margin: 0;
+        font-size: 0.5rem;
+        line-height: 1.2;
+        font-weight: bold;
+        color: var(--navy);
+    }
+
 </style>
