--- a/frontend/mobile.html
+++ b/frontend/mobile.html
@@ -6,82 +6,26 @@
     <script src="/static/btn.js"></script>
 </head>
 <body>
-<div id="nameSelectContainer">
-    <input
-            maxlength="20"
-            id="name"
-            type="text"
-            placeholder="Your Name"
-            inputmode="text"
-            autocapitalize="words"
-            autocorrect="off"
-            autocomplete="off"
-            spellcheck="false"
-    />
-    <button class="btn btn-submit" onclick="submitName()"> Submit Name</button>
-</div>
 
-<div class="extra-actions">
-    <button class="btn btn-present" onclick="present()"> PRESENT </button>
-</div>
+<div class="select-mobile-type">
+    <div class="voter-type">
+        <button class="btn btn-vote" onclick="vote()"> VOTE</button>
+    </div>
 
-<div id="votingContainer">
+    <div class="presenter-type">
+        <button class="btn btn-present" onclick="present()"> PRESENT</button>
+    </div>
 </div>
 </body>
 
 <script type="application/javascript">
-    const sessionId = window.location.pathname.split('/').pop();
-    let ws = null;
-    let name = null;
-
-    function send(val) {
-        if (ws.readyState === WebSocket.OPEN) {
-            ws.send(val);
-            return;
-        }
-        alert("NO OPEN WEBSOCKET");
-    }
-
     function present() {
         window.location.href += "/presentation";
     }
 
-    function submitName() {
-        const btnContainerId = "votingContainer";
-        name = document.getElementById("name").value;
-
-        if (name.length < 2) {
-            alert("Name to short");
-            return;
-        }
-
-        document.getElementById("nameSelectContainer").style.display = "None";
-        document.querySelector(".extra-actions").style.display = "None";
-        document.getElementById(btnContainerId).style.display = "flex";
-        renderBtns(btnContainerId, send);
-
-        ws = new WebSocket(`ws://${window.location.host}/ws/${sessionId}/${Date.now()}/${name}`);
-        ws.addEventListener("message", (message) => {
-            if (message.data === "1") {
-                resetState();
-            }
-        });
+    function vote() {
+        window.location.href += "/vote";
     }
-
-    function startRegistration() {
-        const nameInput = document.getElementById("name");
-        nameInput.focus();
-    }
-
-    document.addEventListener("DOMContentLoaded", () => {
-        startRegistration()
-    });
-    document.getElementById("name").addEventListener("keypress", function (event) {
-        if (event.key === "Enter") {
-            event.preventDefault();
-            submitName();
-        }
-    });
 </script>
 
 <style>
@@ -98,34 +42,11 @@
         background-color: black;
     }
 
-    .extra-actions {
+    .presenter-type {
         display: flex;
         justify-content: end;
         align-items: end;
         height: 100%;
-    }
-
-    #name {
-        width: 100%;
-        padding: 10px;
-        font-size: 1.5rem;
-        font-weight: bold;
-        border: 3px solid black;
-        border-radius: 8px;
-        outline: none;
-        box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.25);
-        transition: all 0.2s ease;
-    }
-
-    #name:focus {
-        transform: translate(-2px, -2px);
-        box-shadow: 2px 2px 0px 0px #007bff;
-    }
-
-    #name::placeholder {
-        color: #888;
-        font-style: italic;
-        font-size: 1.2rem;
     }
 
     .btn {
@@ -140,73 +61,28 @@
         position: relative;
     }
 
-    .btn:hover {
+     .btn:hover {
         cursor: pointer;
     }
 
-    .btn-submit, .btn-present {
-        background-color: blue;
+     .btn-vote, .btn-present {
         width: 100%;
-    }
+        height: 100%;
+     }
 
-    #votingContainer {
-        display: none;
-        width: 100%;
-    }
+     .btn-vote {
+         background-color: #a16a00;
+     }
 
-    #votingContainer > * {
-        color: black;
-    }
+      .btn-present {
+         background-color: #566300;
+     }
 
-    .button-grid {
+     .select-mobile-type {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-auto-rows: 1fr;
+        grid-template-columns: auto;
         height: 100%;
         gap: 0;
-    }
-
-    #votingContainer {
-        display: none;
-        flex-direction: column;
-        height: 100%;
-        width: 100%;
-    }
-
-    .group-wrapper[data-group="1"] {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .group-wrapper[data-group="1"] .button-grid {
-        flex: 1;
-    }
-
-    .button-grid .btn:last-child:nth-child(odd) {
-        grid-column: 1 / span 2;
-    }
-
-    .group-wrapper[data-group="2"] {
-        margin-top: auto;
-        flex: 0 0 auto;
-    }
-
-    .btn:active {
-        filter: brightness(1.1) !important;
-        transform: scale(0.99);
-    }
-
-    .btn.active-highlight {
-        outline: 5px solid white;
-        outline-offset: -5px;
-        z-index: 10;
-        filter: brightness(1.3);
-        box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5);
-    }
-
-    .btn.other-highlighted {
-        filter: brightness(0.6);
     }
 </style>
 
