--- a/frontend/mobile/presentation.html
+++ b/frontend/mobile/presentation.html
@@ -10,7 +10,7 @@
     <div class="next btn" onclick="send(1)"><span class="btn-text"> NEXT </span></div>
     <div class="previous btn" onclick="send(1)"><span class="btn-text"> PREV </span></div>
     <div class="clear btn" onclick="send(0)"><span class="btn-text"> CLEAR </span></div>
-    <div class="extra-actions btn" onclick="toggleExtraActions()"><span class="btn-text"> EXTRA </span></div>
+    <div class="extra-actions btn" onclick="toggleExtraActions()"><span class="btn-text"> ACTION </span></div>
 </div>
 
 <div class="hidden" id="extra-action-container">
