--- a/frontend/questions.html
+++ b/frontend/questions.html
@@ -72,7 +72,7 @@
     let specialActions = [];
     let cardsFlipped = false;
 
-    createQRCode(document.querySelector(".qrcode"));
+    createQRCode(document.querySelector(".qrcode"), sessionId);
 
     ws.addEventListener("message", (message) => {
         const parsedMessage = JSON.parse(message.data)
@@ -211,12 +211,17 @@
                 return;
             }
             cardsFlipped = true;
+            let numberVotes = 0;
             votedAnswers.forEach(el => {
                 const card = el.querySelector(".card");
+                const parsedNumber = parseInt(card.getAttribute("data-value"));
                 card.classList.add("is-flipped");
-                addedVotedValue += parseInt(card.getAttribute("data-value"));
+                if (parsedNumber > 0) {
+                    addedVotedValue += parsedNumber > 0 ? parsedNumber : 0;
+                    numberVotes++;
+                }
             });
-            averageVote.innerText = (addedVotedValue / votedAnswers.length).toFixed(1);
+            averageVote.innerText = (addedVotedValue / numberVotes).toFixed(1);
             averageVote.classList.remove("hidden");
         }, 100);
     }
@@ -243,6 +248,10 @@
     .side-header {
         text-align: center;
         position: absolute;
+    }
+
+    .side-header, .answers {
+        padding-left: 50px
     }
 
     .btn {
@@ -287,6 +296,7 @@
 
     .connected-user {
         padding: 5px;
+        font-size: 1.4rem;
     }
 
     .connected-user.voted {
