Add trello client

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>QR Generator</title>
     <script src="/static/qrcode.min.js"></script>
-    <script src="/static/qr.js"></script>
+    <script src="/static/js/qr.js"></script>
     <style>
         body {
             font-family: sans-serif;
