--- a/frontend/mobile.html
+++ b/frontend/mobile.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Remote</title>
-    <script src="/static/btn.js"></script>
+    <script src="/static/js/btn.js"></script>
 </head>
 <body>
 
