--- a/frontend/questions.html
+++ b/frontend/questions.html
@@ -1,8 +1,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voting</title>
-    <script src="/static/btn.js"></script>
-    <script src="/static/qr.js"></script>
+    <script src="/static/js/btn.js"></script>
+    <script src="/static/js/qr.js"></script>
+    <script src="/static/js/tickets.js"></script>
     <script src="/static/qrcode.min.js"></script>
 </head>
 
